--- a/GBW/style.css
+++ b/GBW/style.css
@@ -1,9 +1,9 @@
 :root{
-    --cor-fundo: #01080E ;
-    --cor-principal: #0B0D20 ;
+    --cor-fundo: #000000 ;
+    --cor-principal: #01041d ;
     --cor-secundaria: #212333; 
-    --cor-destaque: #2BDEFD;
-    --cor-texto: #D7F9FF;
+    --cor-destaque: #ff007f;
+    --cor-texto: #ccff33;
 
 }
 
